[package]
name = "substrate-timetravel"
description = "A CLI tool to extract, process and load historical state from Substrate-based chains."
repository = "https://github.com/gpestana/substrate-timetravel"
homepage = "https://github.com/gpestana/substrate-timetravel"
keywords = ["substrate"]
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.4.0" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
remote-externalities = { git = "https://github.com/paritytech/substrate", branch = "master", package = "frame-remote-externalities" }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-bags-list = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "master" }

core-primitives = { package = "polkadot-core-primitives", git = "https://github.com/paritytech/polkadot", branch = "master" }
runtime-common = { package = "polkadot-runtime-common", git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-runtime = { package = "polkadot-runtime", git = "https://github.com/paritytech/polkadot", branch = "master" }
kusama-runtime = { package = "kusama-runtime", git = "https://github.com/paritytech/polkadot", branch = "master" }
westend-runtime = { package = "westend-runtime", git = "https://github.com/paritytech/polkadot", branch = "master" }

log = "0.4.17"
csv = "1.1"
paste = "1.0.7"
thiserror = "1.0.31"
anyhow = "1.0.71"
jsonrpsee = { version = "0.16.2", features = ["ws-client", "macros"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "sync"] }
clap = { version = "4.2.7", features = ["derive", "env"] }
serde_yaml = "0.9.21"
sub-tokens = { git = "https://github.com/paritytech/substrate-debug-kit", branch = "master" }
env_logger = "0.10.0"
